Create modal for event creation form

--- a/client/src/pages/css/calendar.css
+++ b/client/src/pages/css/calendar.css
@@ -254,6 +254,11 @@
   }
 
   .newEvent{
-    /* padding-top :10px; */
+    height: 10px;
+    
+  }
+
+  .btnNewEvent{
+    padding-top :10px;
     
   }
