--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,10 +9,10 @@ html
   body
     nav.w3-bar.w3-border.w3-light-grey( role="navigation" )
       .w3-bar-item.w3-text-grey Auth0 - NodeJS
-      a(href="/").w3-bar-item.w3-button Home
+      a(href="/") Home
       if locals.user
-        a(href="/user" ).w3-bar-item.w3-button Profile
-        a(id="qsLogoutBtn" href="/logout").w3-bar-item.w3-button Log Out
+        a(href="/user" ) Profile
+        a(href="/logout") Log Out
       else
-        a(id="qsLoginBtn" href="/login").w3-bar-item.w3-button Log In
+        a(href="/login") Log In
     block content
