--- a/views/user.pug
+++ b/views/user.pug
@@ -1,7 +1,10 @@
 extends layout
 
 block content
+ br 
+ .w3-container 
   .w3-card-4
+  header 
     h1 Welcome #{user.nickname}
     img(src=user.picture)
     h2 User profile
