--- a/client/src/pages/css/index.css
+++ b/client/src/pages/css/index.css
@@ -23,7 +23,10 @@
       rgba(72, 15, 144, 0.4) 100%
     );
   }
-  
+  .signup{
+    line-height: 6.5;
+    font-size: 15px;
+  }
   #classicformpage .card {
     background-color: rgba(126, 123, 215, 0);
   }
